--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,11 +2,139 @@
 @import "font-awesome/_font-awesome";
 @import "forms";
 
-*, *:before, *:after {
-  box-sizing: border-box;
+
+body {
+  background: #fff;
+  padding-top: 100px;
 }
-body{
-	background:#eee;
-	padding-top: 70px; 
+a {
+  color: #159485;
 }
 
+#files { margin:2em 0 5em; width:400px; }
+.tree,.tree ul,.tree li { list-style:none; margin:0; padding:0; zoom: 1; }
+.tree ul { margin-left:8px; }
+.tree li a { color:#555; padding:.1em 7px .1em 27px; display:block; text-decoration:none; border:1px dashed #fff; background:url(icon-file.gif) 5px 50% no-repeat; }
+.tree li a.tree-parent { background:url(icon-folder-open.gif) 5px 50% no-repeat; }
+.tree li a.tree-parent-collapsed { background:url(icon-folder.gif) 5px 50% no-repeat; }
+.tree li a:hover,.tree li a.tree-parent:hover,.tree li a:focus,.tree li a.tree-parent:focus,.tree li a.tree-item-active { color:#000; border:1px solid#eee; background-color:#fafafa; -moz-border-radius:4px; -webkit-border-radius:4px; border-radius:4px; }
+.tree li a:focus,.tree li a.tree-parent:focus,.tree li a.tree-item-active { border:1px solid #e2f3fb; background-color:#f2fafd; }
+.tree ul.tree-group-collapsed { display:none; }
+.linear {
+  background: -webkit-gradient(linear, left bottom, left top,
+                               from(#eee), color-stop(0.25, #fff),
+                               to(#eee), color-stop(0.75, #fff));
+}
+.shadow {
+  -moz-box-shadow: 3px 3px 10px #666666;
+  -webkit-box-shadow: 3px 3px 10px #666666;
+  box-shadow: 3px 3px 10px #666666;
+}
+.center {
+  display : -webkit-box;
+  display : -moz-box;
+  display : box;
+  -webkit-box-orient : vertical;
+  -webkit-box-pack : center;
+  -webkit-box-align : center;
+  -moz-box-orient : vertical;
+  -moz-box-pack : center;
+  -moz-box-align : center;
+  box-orient: vertical;
+  box-pack: center;
+  box-align: center;
+}
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+  background-color: #eee;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0,0,0, 0.4);
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(0,0,0, 0.6);
+}
+input[type='file'] {
+  border: 2px solid #eee;
+  border-radius: 10px;
+  padding: 8px;
+  width: 93%;
+}
+#container {
+  display: -webkit-box;
+  -webkit-box-orient: horizontal;
+  height: 100%;
+}
+#container > div {
+  padding: 10px;
+}
+#container > div:first-of-type {
+  overflow-y: auto;
+  overflow-x: hidden;
+  width: 300px;
+  border-right: 1px solid #ccc;
+}
+#container > div:last-of-type {
+ overflow-y: auto;
+ overflow-x: hidden;
+ -webkit-box-flex: 1;
+}
+#thumbnails {
+  background: -webkit-gradient(linear, left bottom, left top,
+                               from(#ccc), color-stop(0.25, #eee),
+                               to(#ccc), color-stop(0.75, #eee));
+  -webkit-box-shadow: inset 0 0 15px #000;
+}
+.thumbnail {
+  /*float:left;*/
+  text-align: center;
+  margin-left: 10px;
+  width: 450px;
+  -webkit-transition-property: opacity, -webkit-transform;
+  -webkit-transition-duration: 0.6s, 0.2s;
+  -webkit-transition-timing-function: ease-in-out;
+  opacity: 0;
+}
+.thumbnail:hover {
+  -webkit-transform: scale(1.5);
+}
+.thumbnail .image {
+  border: 1px solid #ccc;
+  padding: 10px;
+  background-color: #fff;
+}
+.thumbnail .title {
+  margin-bottom: 5px;
+  font-family: Helvetica, sans-serif;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 300px;
+  margin: 5px auto;
+}
+#thumbnails img {
+  border: 1px solid #ccc;
+  width: 100%;
+}
+.thumbnail .details {
+  font-family: Helvetica, sans-serif;
+  font-size: 10pt;
+}
+#progress_bar {
+  display: none;
+}
+progress {
+  background-color: black;
+  margin: 10px 0;
+  padding: 1px;
+  border: 1px solid #000;
+  font-size: 14px;
+  width: auto;
+}
+progress::-webkit-progress-bar-value {
+  background-color: #99ccff;
+}
