--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -16,8 +16,79 @@
 //==========================================================================
 
 //navbar // ================================================================
-.user-menu .dropdown-toggle{
+.navbar-right.useradmin-nav{
+    margin: 12px 0;
+    .userImgThumb{
+      border-radius:50%;
+      width: 50px;
+      height: 50px;
+      overflow: hidden;
+      box-shadow:1px 2px 3px -2px rgba(0,0,0,0.5);
+    }
+}
+.user-menu {
+    &.btn-null{
+      .btn{
+        margin: 5px 10px;
+        font-size: 18px;
+        background: none;
+        padding:0;
+        border:none;
+        color:#505050;
+        border: 1px solid transparent;
+        border-radius:2px;
+        padding: 1px 11px;
+      &.active,
+      &:active{
+        background:none;
+        box-shadow:none;
+        outline: none;
+      }
+      &:hover,
+      &:focus{
+        background:none;
+        outline: none;
+        border: 1px solid #ddd;
+      }
+    }
+    &.open{
+      .btn{
+        background:none;
+        box-shadow:none;
+        outline: none;
+        border: 1px solid #ddd;
+      }
+    }
+    }
+  .dropdown-toggle{
     padding: 25px 15px;
+  }
+  .dropdown-menu{
+    background-color:$white;
+    padding: 20px 20px 0;
+    margin: 20px 0 0;
+    border-radius: 0;
+    box-shadow: 1px 2px 4px -3px rgba(0, 0, 0, 0.7);
+    border-color: #F4F4F4;
+    .useradmin-upload{
+      a{
+        margin: 0 -20px;
+        background:$sky;
+        padding: 20px;
+        text-align: center;
+        color:$white;
+        &:hover{
+          background:lighten($sky, 10%);
+        }
+      }
+    }
+    .btn-basic{
+      width: 130px;
+      margin: 10px 20px 25px;
+      text-align: center;
+      font-size: 12px;
+    }
+  }
 }
 
 .fadeInDown{
