--- a/src/sass/crn/_crn-variables.scss
+++ b/src/sass/crn/_crn-variables.scss
@@ -13,7 +13,7 @@ $misty:#dad7cb;
 $ocean:#00505c;
 $algae:#175e54;
 $sky:#007c92;
-$turquise:#009b76;
+$turquoise:#009b76;
 $night:#012a30; //body copy
 
 $primary: $stanfordRed;
