refactored how errors are templated

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -142,8 +142,7 @@
     }
    .panel-body{
     padding: 0 15px;
-    .e_o0,
-    .e_o1{
+    .row{
       background:rgba($white, 0.7);
       .error-meta{
         display: block;
