--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -927,10 +927,18 @@ body,
 		&.navbar-right{
 			a{
 				color:$night;
+				padding:5px;
+				background:none;
 				&:hover{
 					background:none;
 					color:$primary;
+
 				}
+			}
+			.dropdown-menu{
+				border-radius: 0;
+				border: none;
+				box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
 			}
 		}
 	}
