--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -688,6 +688,24 @@ body,
 			.error-wrap{
 				overflow:hidden;
 				overflow-y: scroll;
+					a.error-log{
+						border:none;
+						background-color: rgba(0, 0, 0, 0);
+						border-color: rgba(0, 0, 0, 0);
+						box-shadow: none;
+						margin: 0;
+						padding: 5px;
+						text-align: center;
+						border-radius: 0;
+						background-color: #EEE;   
+						font-size: 10px;
+						text-align: center;
+						display: block;
+						color:$primary;
+						&:hover{
+							color: $primaryHover;
+						}
+					}
 				.errors-header{
 					padding: 10px;
 					background-color:#fff;
