--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -547,6 +547,8 @@ body,
 	}
 	.upload-accordion{
 		margin-top: 74px;
+		border-bottom: 2px solid rgba(0,0,0,0.63);
+		background:transparent;
 		.upload-panel {
 			border-radius: 0;
 			border: none;
@@ -594,6 +596,7 @@ body,
 				.panel-body{
 				 	padding: 0;
 					.upload-wrap{
+						position:relative;
 						padding:20px  0;
 						background:#f3f3f3;
 						border-bottom:1px solid #bbb;
@@ -613,8 +616,10 @@ body,
 							font-size: 15px;
 							text-transform:uppercase;
 							font-weight: 600;
-							strong{
-								color: $salmon;
+							color: $rock;
+							max-width: 400px;
+							&.error{
+								color:$coral;
 							}
 						}
 						//custom upload input //dirUpload button
@@ -680,12 +685,13 @@ body,
 
 			//Error Wrap in accordion in sidebar
 			.error-wrap{
+				position:relative;
 				overflow:hidden;
 				overflow-y: scroll;
 				.errors-header{
 					padding: 10px;
-					background-color: #FFEDED;
-					color: #AE0000;
+					background-color:#F3F3F3;
+					color:  $coral;
 					text-align: center;
 					text-transform: uppercase;
 					font-weight: 700;
@@ -693,6 +699,23 @@ body,
 					border-left: 0;
 					border-right: 0;
 					z-index: 1400;
+				}
+				a.error-log{
+					border:none;
+					border-color: rgba(0, 0, 0, 0);
+					box-shadow: none;
+					margin: 0;
+					padding: 5px;
+					text-align: center;
+					border-radius: 0;
+					font-size: 10px;
+					text-align: center;
+					display: block;
+					color:$primary;
+					background-color: transparent;
+					&:hover{
+						color: $primaryHover;
+					}
 				}
 				.panel-group{
 					margin-bottom: 30px;
@@ -710,14 +733,13 @@ body,
 						border-radius:0;
 						.panel-heading{
 							border:none;
-							background-color: rgba(0, 0, 0, 0);
 							border-color: rgba(0, 0, 0, 0);
 							box-shadow: none;
 							margin: 0;
 							padding: 5px 0;
 							text-align: center;
 							border-radius: 0;
-							background-color: #EEE;     
+							background-color: transparent;     
 							.panel-title{
 								font-size: 10px;
 								color:#aaa;
@@ -762,8 +784,8 @@ body,
 							display: block;
 							padding: 10px;
 							font-size: 12px;
-							color:lighten($primary,10%);
-							background:#dedede;
+							color:$primaryHover;
+							background:lighten($salmon, 25%);
 							border-bottom: 1px solid #BBB;
 							text-decoration: none;
 							&:before{
@@ -782,7 +804,7 @@ body,
 								}
 							}
 					 		&.collapsed{
-								background:#e0e0e0;
+								background:lighten($salmon, 30%);
 								color:$primary;
 								&:before{
 									color:$primary;
@@ -794,7 +816,7 @@ body,
 							&:hover{
 								color:lighten($primary,10%);
 								text-decoration: none;
-								background:#d9d9d9;
+								background:lighten($salmon, 25%);
 								i{
 									&:after{
 										color:$primary;
@@ -867,8 +889,8 @@ body,
 				}
 			}
 		}
-		//when upload is ready
-		.validate-buttons{
+		//when errors are present ready
+		.no-errors-warnings{
 			display: none;
 		}
 	}	
@@ -878,7 +900,7 @@ body,
 	input.dirUpload-btn{
 		display: none;
 	}
-	.validate-buttons{
+	.no-errors-warnings{
 		display: block;
 	}
 }
